<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">det</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">Log In</string>
    <string name="logout">X</string>
    <string name="app_id">115466291969343</string>
    <string name="parse_app_id">SnZIklEaMlecec0zVwMgEgXDgeDWgM458xCUXPqU</string>
    <string name="parse_client_key">TLNJj6cz7SquDWwPlNHRg79YGHWpftHbh0WoEyLx</string>
    <string name="login_intro">Please log in to use Det</string>
    <string name="add_transaction">+</string>
    <string name="add_transaction_amount">How much did you pay?</string>
    <string name="add_transaction_description">What did you pay for?</string>
    <string name="add_transaction_amount_hint">0.00</string>
    <string name="add_transaction_description_hint">description</string>
    <string name="select_friends_text">Who did you pay for?</string>
    <string name="select_friends_button">Select friends</string>
    <string name="add_transaction_submit">Submit</string>
    <string name="exception">Exception: %1$s</string>
    <string name="title_activity_about_page">AboutPage</string>
    <string name="resolve_debt">Resolve</string>
    <string name="about">About</string>
    <string name="refresh_debts">r</string>
    <string name="no_debts">You are not involved in any debts</string>
    <string name="user_home_intro">det</string>
    <string name="owes">owes</string>
    <string name="debt_amount">$50</string>
    <string name="cancel_transaction_text">&lt; HOME</string>
    <string name="save_transaction_text">SAVE</string>
</resources>
